--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <properties>
         <spring.boot.version>1.0.2.RELEASE</spring.boot.version>
         <jackson.version>2.3.3</jackson.version>
-        <start-class>com.ak.Application</start-class>
+        <start-class>com.aksoft.library.Application</start-class>
     </properties>
 
     <dependencies>
