--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,23 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring3</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
             <plugin> 
                 <artifactId>maven-compiler-plugin</artifactId> 
-                <version>2.3.2</version> 
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -48,6 +58,10 @@
         <repository>
             <id>java.net</id>
             <url>http://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>maven-repository</id>
+            <url>http://mvnrepository.com/</url>
         </repository>
     </repositories>
     <pluginRepositories>
